# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/security/huks/huks.gni")
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("HksServiceOnRemoteRequestFuzzTest") {
  module_out_path = fuzz_module_out_path
  fuzz_config_file = "../hksserviceonremoterequest_fuzzer"

  include_dirs = [
    ".",
    "../../../interfaces/inner_api/huks_standard/main/include/",
    "../../../frameworks/huks_standard/main/common/include/",
    "../../../services/huks_standard/huks_service/main/os_dependency/sa/",
    "../../../services/huks_standard/huks_service/main/core/include/",
    "//third_party/bounds_checking_function/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "hks_service_on_remote_request_fuzzer.cpp" ]

  deps = [
    "../../../services/huks_standard/huks_service/main:libhuks_service_standard_static",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":HksServiceOnRemoteRequestFuzzTest",
  ]
}
###############################################################################
