# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/security/huks/build/config.gni")
import("//build/ohos.gni")
import("//build/test.gni")

ohos_static_library("hks_fuzz_util") {
  sanitize = {
    integer_overflow = true
    cfi = true
    debug = false
    cfi_cross_dso = true
    boundary_sanitize = true
    ubsan = true
  }
  testonly = true
  subsystem_name = "security"
  part_name = "huks"
  sources = [ "hks_fuzz_util.cpp" ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
  ]
  deps = [ "../../../interfaces/inner_api/huks_standard/main:libhukssdk" ]
}
