#
# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//build/ohos.gni")

ohos_shared_library("cipher_napi") {
  defines = [
    "L2_STANDARD",
    "_HARDWARE_ROOT_KEY_",
    "_HUKS_LOG_ENABLE_",
  ]

  sources = [ "cipher.cpp" ]

  include_dirs = [
    "//third_party/bounds_checking_function/include",
    "//base/security/huks/frameworks/crypto_lite/cipher/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits//include",
    "log",
  ]
  deps = [
    "//base/security/huks/frameworks/crypto_lite/cipher:cipher_shared",
    "//foundation/ace/napi:ace_napi",
    "//third_party/bounds_checking_function:libsec_shared",
    "//utils/native/base:utils",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags_cc = [
    "-Wall",
    "-Werror",
  ]

  relative_install_dir = "module"
  subsystem_name = "security"
  part_name = "huks"
}
