# Copyright (C) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/huks/build/config.gni")
import("//build/ohos.gni")

config("huks_config") {
  include_dirs = [ "include" ]
}

if (os_level == "standard") {
  ohos_static_library("libhuks_core_standard_static") {
    subsystem_name = "security"
    part_name = "huks"
    public_configs = [ ":huks_config" ]

    sources = [ "./src/hks_local_engine.c" ]
    cflags = [
      "-Wall",
      "-Werror",
    ]
    deps = [ "//base/security/huks/frameworks/huks_standard/main/common:libhuks_common_standard_static" ]

    complete_static_lib = true

    configs = [
      "//base/security/huks/frameworks/config/build:l2_standard_common_config",
    ]

    branch_protector_ret = "pac_ret"

    sanitize = {
      integer_overflow = true
      cfi = true
      debug = false
      cfi_cross_dso = true
      boundary_sanitize = true
      ubsan = true
    }
    sources += [ "./src/hks_verifier.c" ]
    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
      "openssl:libcrypto_shared",
    ]
  }
} else {
  ohos_static_library("libhuks_core_small_static") {
    public_configs = [ ":huks_config" ]
    configs = [
      "//base/security/huks/frameworks/config/build:l1_small_common_config",
    ]

    sources = [ "./src/hks_local_engine.c" ]
    cflags = []

    deps = [ "//base/security/huks/frameworks/huks_standard/main/common:libhuks_common_small_static" ]

    complete_static_lib = true
    external_deps = [ "hilog_lite:hilog_shared" ]

    if (huks_dependency_mbedtls_path != "") {
      deps += [ huks_dependency_mbedtls_path ]
    } else {
      deps += [ "//third_party/mbedtls" ]
    }
    if (huks_dependency_openssl_path != "") {
      deps += [ huks_dependency_openssl_path ]
    } else {
      if (ohos_kernel_type == "liteos_a" && ohos_kernel_type != "linux") {
        deps += [ "//third_party/openssl/ohos_lite:openssl_shared" ]
      } else {
        deps += [ "//third_party/openssl:libcrypto_shared" ]
      }
    }
  }
}
