# Copyright (C) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/huks/build/config.gni")
import("//base/security/huks/huks.gni")
import("//build/ohos.gni")

if (os_level == "standard") {
  ohos_static_library("libhuks_crypto_engine_standard_static") {
    subsystem_name = "security"
    part_name = "huks"
    if (use_crypto_lib == "openssl") {
      public_deps = [ "//base/security/huks/frameworks/huks_standard/main/crypto_engine/openssl:libhuks_openssl_standard_static" ]
    }
    if (use_crypto_lib == "mbedtls") {
      public_deps = [ "//base/security/huks/frameworks/huks_standard/main/crypto_engine/mbedtls:libhuks_mbedtls_standard_static" ]
    }

    sources = [
      "//base/security/huks/frameworks/huks_standard/main/crypto_engine/crypto_common/src/hks_core_ability.c",
      "//base/security/huks/frameworks/huks_standard/main/crypto_engine/crypto_common/src/hks_core_get_main_key.c",
    ]
    include_dirs = [
      "//base/security/huks/interfaces/inner_api/huks_standard/main/include",
      "//base/security/huks/frameworks/huks_standard/main/common/include",
      "//base/security/huks/frameworks/huks_standard/main/crypto_engine/crypto_common/include",
    ]

    external_deps = [ "c_utils:utils" ]

    complete_static_lib = true

    branch_protector_ret = "pac_ret"

    sanitize = {
      integer_overflow = true
      cfi = true
      debug = false
      cfi_cross_dso = true
      boundary_sanitize = true
      ubsan = true
    }
    configs = [
      "//base/security/huks/frameworks/config/build:l2_standard_common_config",
    ]
  }
} else {
  ohos_static_library("libhuks_crypto_engine_small_static") {
    configs = [
      "//base/security/huks/frameworks/config/build:l1_small_common_config",
    ]

    sources = [
      "//base/security/huks/frameworks/huks_standard/main/crypto_engine/crypto_common/src/hks_core_ability.c",
      "//base/security/huks/frameworks/huks_standard/main/crypto_engine/crypto_common/src/hks_core_get_main_key.c",
    ]
    include_dirs = [
      "//base/security/huks/interfaces/inner_api/huks_standard/main/include",
      "//base/security/huks/frameworks/huks_standard/main/common/include",
      "//base/security/huks/frameworks/huks_standard/main/crypto_engine/crypto_common/include",
      "//third_party/bounds_checking_function/include",
    ]

    if (huks_use_mbedtls) {
      public_deps = [ "//base/security/huks/frameworks/huks_standard/main/crypto_engine/mbedtls:libhuks_mbedtls_small_static" ]
    } else {
      public_deps = [ "//base/security/huks/frameworks/huks_standard/main/crypto_engine/openssl:libhuks_openssl_small_static" ]
    }

    complete_static_lib = true
  }
}
